<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2016 Seoul National University
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.snu.mist</groupId>
    <artifactId>mist</artifactId>
    <name>MIST</name>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <reef.version>0.13.0-incubating</reef.version>
        <hadoop.version>2.6.0</hadoop.version>
        <project.build.directory>target</project.build.directory>
        <maven-checkstyle-plugin.version>2.15</maven-checkstyle-plugin.version>
        <checkstyle.version>6.6</checkstyle.version>
        <avro.version>1.8.0</avro.version>
    </properties>

    <organization>
        <name>SNU</name>
        <url>http://cmslab.snu.ac.kr</url>
    </organization>

    <dependencies>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>reef-common</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>reef-runtime-local</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>reef-runtime-yarn</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>reef-io</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>wake</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.reef</groupId>
            <artifactId>tang</artifactId>
            <version>${reef.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>${hadoop.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-mapreduce-client-core</artifactId>
            <version>${hadoop.version}</version>
        </dependency>
        <dependency>
            <groupId>com.orientechnologies</groupId>
            <artifactId>orientdb-core</artifactId>
            <version>2.1.9</version>
        </dependency>

        <!-- Test -->
        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.4</version>
        </dependency>

        <!-- Avro -->
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-ipc</artifactId>
            <version>${avro.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>src/main/resources/checkstyle.xml</configLocation>
                    <outputFile>${project.build.directory}/checkstyle-errors.xml</outputFile>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                            <goal>checkstyle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputFile>
                        ${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar
                    </outputFile>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>yarn-default.xml</exclude>
                                <exclude>yarn-version-info.properties</exclude>
                                <exclude>core-default.xml</exclude>
                                <exclude>LICENSE</exclude>
                                <exclude>META-INF/*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>.gitattributes</exclude>
                        <exclude>.gitignore</exclude>
                        <exclude>.git/**</exclude>
                        <!-- Intellij idea project files -->
                        <exclude>lang/java/.idea/**</exclude>
                        <exclude>**/*.iml</exclude>
                        <exclude>**/target/**</exclude>
                        <!-- ReadMe files -->
                        <exclude>**/README.*</exclude>
                        <exclude>**/*.md</exclude>
                        <!-- The below are sometimes created during tests -->
                        <exclude>REEF_LOCAL_RUNTIME/**</exclude>
                        <exclude>REEF_MESOS_RUNTIME/**</exclude>
                        <!-- JVM error logs, especially troublesome on CI servers -->
                        <exclude>**/hs_err_*.log</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro-maven-plugin</artifactId>
                <version>${avro.version}</version>
                <executions>
                    <execution>
                        <id>schemas</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>schema</goal>
                            <goal>protocol</goal>
                            <goal>idl-protocol</goal>
                        </goals>
                        <configuration>
                            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
                            <outputDirectory>${project.basedir}/target/generated-sources/avro/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>